fixed displaying on mobile devices (because of big fixed width of .card in second section)

--- a/frontend/styles/header.sass
+++ b/frontend/styles/header.sass
@@ -5,7 +5,7 @@
 
 header
     position: relative
-
+    width: 100%
     // nav_expanded
 
 
