--- a/frontend/styles/sections.sass
+++ b/frontend/styles/sections.sass
@@ -112,7 +112,7 @@
 
         .card
             margin: auto
-            width: 400px
+            // width: 400px
             padding: 0px 50px
             h3
                 white-space: pre-line
